--- a/index.html
+++ b/index.html
@@ -30,41 +30,41 @@
                         <h6 class="mt-2">Date of birth?</h6>
                     </div>
 
-                    <div id="birthdate" class="px-5">
-                        <select name="" id="" style="width: 80px; height: 35px;"">
-                <option value="">1</option>
-                <option value="">2</option>
-                <option value="">3</option>
-                <option value="">4</option>
-                <option value="">5</option>
-                <option value="">6</option>
-                <option value="">7</option>
-                <option value="">8</option>
-                <option value="">9</option>
-                <option value="">10</option>
-                <option value="">11</option>
-                <option value="">12</option>
-                <option value="">13</option>
-                <option value="">14</option>
-                <option value="">15</option>
-                <option value="">16</option>
-                <option value="">17</option>
-                <option value="">18</option>
-                <option value="">19</option>
-                <option value="">20</option>
-                <option value="">21</option>
-                <option value="">22</option>
-                <option value="">23</option>
-                <option value="">24</option>
-                <option value="">25</option>
-                <option value="">26</option>
-                <option value="">27</option>
-                <option value="">28</option>
-                <option value="">29</option>
-                <option value="">30</option>
-                <option value="">31</option>
-              </select>
-              <select name="" id="" style=" width: 80px; height: 35px;">
+                    <div id="birthdate">
+                        <select class="rounded border  border-secondary py-2 px-4" name="" id="">
+                            <option value="">1</option>
+                            <option value="">2</option>
+                            <option value="">3</option>
+                            <option value="">4</option>
+                            <option value="">5</option>
+                            <option value="">6</option>
+                            <option value="">7</option>
+                            <option value="">8</option>
+                            <option value="">9</option>
+                            <option value="">10</option>
+                            <option value="">11</option>
+                            <option value="">12</option>
+                            <option value="">13</option>
+                            <option value="">14</option>
+                            <option value="">15</option>
+                            <option value="">16</option>
+                            <option value="">17</option>
+                            <option value="">18</option>
+                            <option value="">19</option>
+                            <option value="">20</option>
+                            <option value="">21</option>
+                            <option value="">22</option>
+                            <option value="">23</option>
+                            <option value="">24</option>
+                            <option value="">25</option>
+                            <option value="">26</option>
+                            <option value="">27</option>
+                            <option value="">28</option>
+                            <option value="">29</option>
+                            <option value="">30</option>
+                            <option value="">31</option>
+                        </select>
+                        <select class="rounded border border-secondary py-2 px-4" name="" id="">
                             <option value="">Jan</option>
                             <option value="">Feb</option>
                             <option value="">Mar</option>
@@ -78,7 +78,7 @@
                             <option value="">Nov</option>
                             <option value="">Dec</option>
                         </select>
-                        <select name="" id="" style="width: 80px; height: 35px;">
+                        <select class="rounded border border-secondary py-2 px-4" name="" id="">
                             <option value="">2024</option>
                             <option value="">2023</option>
                             <option value="">2022</option>
@@ -130,7 +130,8 @@
                             Female
                             <input type="radio" name="sex" id="1" value="1">
                         </label>
-                        <label for="gender" class="border border-secondary py-1 px-3">
+                        <label for="gender" class="border border-secondary py-1 px-4"
+                            style="width: 6.5rem; right: 7px; position: relative">
                             Male
                             <input type="radio" name="sex" id="2" value="2">
                         </label>
